# fmeval-evaluation-using-mlflow

./: README.md  pyproject.toml
examples/: 00-Setup.ipynb  Bedrock.ipynb  JumpStart.ipynb  compare_models.ipynb  requirements.txt  utils.py
examples/datasets/: README.md
fmeval_mlflow/: __init__.py  fmeval_mlflow.py
test/: test_fmeval_mlflow.py
