[tool.poetry]
name = "fmeval-mlflow"
version = "0.1.0"
description = "Utility to simplify tracking of FMeval metric with MLflow"
authors = ["Amazon Web Services"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sagemaker = "^2.227.0"
fmeval = "^1.2.1"
mlflow-skinny = "^2.16.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
boto3-stubs = {extras = ["essential", "sagemaker"], version = "^1.34.158"}
ipywidgets = "^8.1.3"
plotly = "^5.24.1"
python-dotenv = "^1.0.1"



[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.4"
pytest-xdist = "^3.6.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
 addopts="-n 4"
